Fixed Package issue

--- a/DurableFunctions/.gitignore
+++ b/DurableFunctions/.gitignore
@@ -3,6 +3,9 @@
 
 # Azure Functions localsettings file
 local.settings.json
+__azurite_db*
+__blobstorage__
+__queuestorage__
 
 # User-specific files
 *.suo
