--- a/PdfConversion/PdfConversion.csproj
+++ b/PdfConversion/PdfConversion.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.OpenApi" Version="2.0.0-preview2"/>
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.OpenApi" Version="2.0.0-preview2"/>
     <PackageReference Include="Syncfusion.Pdf.Net.Core" Version="24.2.8"/>
+    <PackageReference Include="Syncfusion.DocIORenderer.Net.Core" Version="24.2.8"/>
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
