--- a/PdfConversion/PdfConversion.csproj
+++ b/PdfConversion/PdfConversion.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.OpenApi" Version="2.0.0-preview2"/>
     <PackageReference Include="Syncfusion.Pdf.Net.Core" Version="24.2.8"/>
     <PackageReference Include="Syncfusion.DocIORenderer.Net.Core" Version="24.2.8"/>
+    <PackageReference Include="Syncfusion.XlsIORenderer.Net.Core" Version="24.2.8"/>
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
