--- a/PdfConversion/PdfConversion.csproj
+++ b/PdfConversion/PdfConversion.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Syncfusion.Pdf.Net.Core" Version="24.2.8"/>
     <PackageReference Include="Syncfusion.DocIORenderer.Net.Core" Version="24.2.8"/>
     <PackageReference Include="Syncfusion.XlsIORenderer.Net.Core" Version="24.2.8"/>
+    <PackageReference Include="Syncfusion.PresentationRenderer.Net.Core" Version="24.2.8"/>
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
